--- a/Samples/Download Updated Content from Autodesk Construction Cloud/DownloadUpdatedContentFromAutodeskConstructionCloud.ipynb
+++ b/Samples/Download Updated Content from Autodesk Construction Cloud/DownloadUpdatedContentFromAutodeskConstructionCloud.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "## Use case \n",
-    "Project and asset managers need timely access to up-to-date design data for tracking progress and resolving issues. The BIM Cloud Connection in ArcGIS Pro lets you download CAD and BIM content from ACC to include in your project. This sample lets you schedule automated refreshes for documents stored in ACC using Python and Flask."
+    "Project and asset managers need timely access to up-to-date design data for tracking progress and resolving issues. The BIM Cloud Connection in ArcGIS Pro allows you to download CAD and BIM content from ACC to include in your project. This sample allows you to schedule automated refreshes for documents stored in ACC using Python and Flask."
    ]
   },
   {
@@ -25,11 +25,11 @@
    "metadata": {},
    "source": [
     "## Requirements\n",
-    "\n",
-    "- Before continuing with the exercise, the user is expected to have used ArcGIS Pro to connect to BIM Cloud Connection to create an Autodesk Source File Manifest (ASFM) file. See https://pro.arcgis.com/en/pro-app/latest/help/data/cad/accessing-cad-data-from-cloud-connections.htm for more information. \n",
-    "- Please have an ASFM on disk before continuing with the exercise.\n",
-    "- The user is also expected to have basic familiarity using Python and a Jupyter Notebook, as well as basic HTTP request knowledge.\n",
-    "- Additionally, please download the [Flask](https://pypi.org/project/Flask/) and [Requests](https://pypi.org/project/requests/) library using the following command: `python -m pip install flask requests`."
+    "Before continuing with the exercise, you must do the following:\n",
+    "- Use ArcGIS Pro to connect to BIM Cloud Connection to create an Autodesk Source File Manifest (ASFM) file. See [BIM cloud connections for CAD and BIM files](https://pro.arcgis.com/en/pro-app/latest/help/data/cad/accessing-cad-data-from-cloud-connections.htm) for more information. \n",
+    "- Have an ASFM file on disk.\n",
+    "- Familarize yourself with basic Python and Jupyter Notebook, as well as basic HTTP request knowledge.\n",
+    "- Download the [Flask](https://pypi.org/project/Flask/) and [Requests](https://pypi.org/project/requests/) library using the following command: `python -m pip install flask requests`."
    ]
   },
   {
@@ -43,9 +43,7 @@
     "\n",
     "The first step is to register a web app Autodesk Platform Service (APS). \n",
     "\n",
-    "While following the tutorial, register a \"Traditional Web App\". Once you have a set of CLIENT_ID and CLIENT_SECRET as well as the redirect URL setup, return to this notebook and proceed to the next step.\n",
-    "\n",
-    "Follow the tutorial at https://get-started.aps.autodesk.com until the \"Provision access in other products\" section to set up your application."
+    "Follow the Autodesk [Getting Started](https://get-started.aps.autodesk.com) tutorial until the **Provision access in other products** section to set up your application. While following the tutorial, register an app as a \"Traditional Web App\". Once you have a set of CLIENT_ID and CLIENT_SECRET as well as the redirect URL setup, return to this notebook and proceed to the next step."
    ]
   },
   {
@@ -55,7 +53,7 @@
    "source": [
     "### Step 2: Authenticate with APS to exchange for an access token\n",
     "\n",
-    "The next step is to perform 3-legged authentication with APS for an authentication code and exchange the code for an access token. The following code setups a Flask application to authenticate with APS."
+    "Next, you will perform three-legged authentication with APS for an authentication code and exchange the code for an access token. Use the following code to set up a Flask application to authenticate with APS:"
    ]
   },
   {
@@ -94,7 +92,7 @@
    "id": "1b77cba0-148d-4786-a10b-d78402fee57a",
    "metadata": {},
    "source": [
-    "Ensure the redirect URI from Step 1 matches the following URI. If you used a different URI, change it, else leave it unchanged. "
+    "Ensure the redirect URI from Step 1 matches the following URI. If you used a different URI, change it. If you did not, leave it unchanged. "
    ]
   },
   {
@@ -160,7 +158,7 @@
     "\n",
     "Store the `access_token` and the `refresh_token` in the variables below. Additionally, store the authentication code within the callback function to refresh the `access_token` later (see Appendix A). Now you can interrupt the kernel to terminate the Flask app. \n",
     "\n",
-    "For more information about using Python and Flask to perform a three-legged token exchange, see https://aps.autodesk.com/blog/three-legged-token-python-and-flask."
+    "For more information about using Python and Flask to perform a three-legged token exchange, see [Three-Legged token with Python and Flask](https://aps.autodesk.com/blog/three-legged-token-python-and-flask)."
    ]
   },
   {
@@ -183,7 +181,7 @@
     "\n",
     "To check if a file has been updated on BIM 360, you will need the `project_id`, `item_id` and the current version of the file on disk. All required information is stored inside an Autodesk Source File Manifest (ASFM) file on disk. The following demonstrates how to open an existing ASFM file and retrieve the `project_id`, `item_id`, and current version of the file.\n",
     "\n",
-    "First, replace the following variable with the file path to the ASFM file on disk."
+    "Replace the following variable with the file path to the ASFM file on disk:"
    ]
   },
   {
@@ -201,7 +199,7 @@
    "id": "473fc2f6-9d59-4732-9ca7-f352426e3518",
    "metadata": {},
    "source": [
-    "Next, run the following cell, which will read the ASFM file into memory."
+    "Run the following cell, which will read the ASFM file into memory."
    ]
   },
   {
@@ -229,7 +227,7 @@
    "id": "d6ea2005-d727-4654-ab17-e6b3c1e1e32b",
    "metadata": {},
    "source": [
-    "The next step is to use the `access_token` along with the `project_id` and `item_id` to retrieve the item metadata from APS and compare against the current file version."
+    "Use the `access_token` along with the `project_id` and `item_id` to retrieve the item metadata from APS and compare against the current file version."
    ]
   },
   {
@@ -256,7 +254,7 @@
    "id": "ddcc9c4b-1c95-4a11-9972-1cce6909c1fc",
    "metadata": {},
    "source": [
-    "If the `cloud_version` is newer, then we will need to update the file locally. \n",
+    "If the `cloud_version` is newer, you must update the file locally. \n",
     "\n",
     "Combining the above generates the following function, which will be used in a later step:\n",
     "\n",
@@ -293,7 +291,7 @@
    "source": [
     "### Step 4: Create a function to download file from BIM 360\n",
     "\n",
-    "If BIM 360 has a newer versioned file, then you will need to download the file from BIM 360. The following shows how to retrieve the item metadata using the `project_id`, `item_id`, and `access_token`."
+    "If BIM 360 has a newer versioned file, you must download the file from BIM 360. Use the following code to retrieve the item metadata using the `project_id`, `item_id`, and `access_token`."
    ]
   },
   {
@@ -317,7 +315,7 @@
    "id": "3fb05a48-e229-4d69-9e5c-f8352fe17688",
    "metadata": {},
    "source": [
-    "After downloading the item metadata, you can retrieve the storage URL and exchange it for a download URL."
+    "After downloading the item metadata, retrieve the storage URL and exchange it for a download URL."
    ]
   },
   {
@@ -346,7 +344,7 @@
    "id": "98b467e5-cdf1-4970-89cd-03a3d2e2a537",
    "metadata": {},
    "source": [
-    "The next part shows how to use the `download_url` to download the file, overwriting the existing file on disk."
+    "Use the `download_url` to download the file, overwriting the existing file on disk."
    ]
   },
   {
@@ -413,7 +411,7 @@
     "        shutil.copyfileobj(download.raw, out_file)\n",
     "```\n",
     "\n",
-    "After downloading the updated file from APS, remember update the local file version in the ASFM file. "
+    "After downloading the updated file from APS, update the local file version in the ASFM file. "
    ]
   },
   {
@@ -437,7 +435,7 @@
    "source": [
     "### Step 5 (final): Create and schedule a Python script to automatically update downloaded BIM 360 files\n",
     "\n",
-    "This is the final step to creating a Python script that can download updated BIM 360 files from APS. We can combine the Python functions at the end of Step 3 and Step 4 to generate a Python script, like the one seen below:\n"
+    "This final step is to create a Python script that can download updated BIM 360 files from APS. Combine the Python functions at the end of Step 3 and Step 4 to generate a Python script, like the one seen below:\n"
    ]
   },
   {
@@ -553,9 +551,9 @@
    "id": "5fc88e9a-3807-4f76-a57e-42d15b2219c0",
    "metadata": {},
    "source": [
-    "You may add additional ASFM files inside the list `asfm_files` as needed to iterate over all existing ASFM files. For convenience, the content in the above cell can be copied into and executed as stand-alone Python script with minimal modification. \n",
+    "Optionally, add more ASFM files inside the list `asfm_files` as needed to iterate over all existing ASFM files. For convenience, the content in the above cell can be copied into and run as a stand-alone Python script with minimal modification. \n",
     "\n",
-    "Now you can use [Windows Task Scheduler](https://learn.microsoft.com/en-us/windows/win32/taskschd/task-scheduler-start-page) or your preferred scheduler application to schedule the Python script to update the downloaded BIM 360 files at a specified time. Happy automating!"
+    "Now you can use [Windows Task Scheduler](https://learn.microsoft.com/en-us/windows/win32/taskschd/task-scheduler-start-page) or your preferred scheduler application to schedule the Python script to update the downloaded BIM 360 files at a specified time. "
    ]
   },
   {
