--- a/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
+++ b/Samples/Improve Exterior Shell of Building Scene Layer/ImproveExteriorShell.ipynb
@@ -10,7 +10,7 @@
    "metadata": {},
    "source": [
     "# Improve the Exterior Shell of the Building Scene Layer\n",
-    "This notebook shows the sample described in this blog: [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin).\n",
+    "This notebook shows the sample described in the [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin) blog article.\n",
     "\n",
     "![ExteriorShell1.png](attachment:ExteriorShell1.png)"
    ]
@@ -20,20 +20,20 @@
    "metadata": {},
    "source": [
     "## Use case\n",
-    "After combining multiple BIM models into a single feature dataset, the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add exterior features that were modeled as floors in the original BIM models to improve visualization in the Building Scene Layer. \n",
+    "After combining multiple BIM models into a single feature dataset, the exterior shell may include too much or not enough information. This sample shows how to remove unnecessary details and add exterior features that were modeled as floors in the original BIM models to improve visualization in the building scene layer. \n",
     "\n",
     "## Requirements\n",
-    "- A single dataset created from multiple BIM models. For information on how to do this, check out this blog: [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer).\n",
+    "- You must have a single dataset created from multiple BIM models. For information on how to do this, check out the [Combine multiple digital models into a single building scene layer](https://www.esri.com/arcgis-blog/products/arcgis-pro/aec/combine-multiple-digital-models-into-a-single-building-scene-layer) blog article.\n",
     "\n",
     "## How to use the sample\n",
-    "For more detail, check out this blog: [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin). Download this Jupyter Notebook and adjust the code as needed.\n"
+    "For more detail, check out the [Understand and improve the exterior shell of the building layer to support your digital twin](https://www.esri.com/arcgis-blog/products/arcgis-pro/3d-gis/understand-and-improve-the-exterior-shell-of-the-building-layer-to-support-your-digital-twin) blog article. Download this Jupyter Notebook and adjust the code as needed.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Step 1: Set up environment and variables\n"
+    "#### Step 1: Set the up environment and variables\n"
    ]
   },
   {
