--- a/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
+++ b/Samples/Update a Building Scene Layer/UpdateABuildingSceneLayer.ipynb
@@ -16,7 +16,7 @@
     "![BSLPK2.png](attachment:BSLPK2.png)\n",
     "\n",
     "## Use case\n",
-    "To keep stakeholders updated at different stages of the project, this sample shows how to minimize production time by automating the update of a previously-shared building scene layer. \n",
+    "To keep stakeholders updated at different stages of the project, this sample shows how to minimize production time by automating the update of a previously shared building scene layer. \n",
     "\n",
     "## Requirements\n",
     "\n",
@@ -140,10 +140,10 @@
     "hidden": true
    },
    "source": [
-    "This step is optional if:\n",
-    "* your building/structure is represented by one single digital model or \n",
-    "* you want to publish each digital model individually or\n",
-    "* you don’t require editing the geometry and/or attributes using Pro"
+    "This step is optional in the following situations:\n",
+    "* Your building or structure is represented by one single digital model\n",
+    "* You want to publish each digital model individually\n",
+    "* You don’t require editing the geometry or attributes using ArcGIS Pro"
    ]
   },
   {
@@ -184,7 +184,7 @@
     "hidden": true
    },
    "source": [
-    "Do not worry if some `WARNING 000117: Warning empty output generated.` messages are returned. It is common that not all possible layers will have content."
+    "Do not worry if `WARNING 000117: Warning empty output generated.` messages are returned. It is common that not all possible layers will have content."
    ]
   },
   {
@@ -256,7 +256,7 @@
     "hidden": true
    },
    "source": [
-    "#### Share the Package as a Building Scene Layer (hosted)"
+    "#### Share the Package as a Hosted Building Scene Layer"
    ]
   },
   {
@@ -265,12 +265,12 @@
     "hidden": true
    },
    "source": [
-    "**NOTES :** \n",
+    "**NOTES:** \n",
     "* This tool will publish the package under the name provided by the user as `dataset_name`. It will fail if a layer of that name already exists in the organization.\n",
-    "* If running this notebook in ArcGIS Pro and the user is already logged into an organization through ArcGIS Pro, the tool will use these credentials and will not require a username/password.\n",
+    "* If running this notebook in ArcGIS Pro and the user is already signed in to an organization through ArcGIS Pro, the tool will use these credentials and will not require a username and password.\n",
     "* The organizational sharing and groups setting will depend on your organization.\n",
-    "* For best practices the Tags and Summary should be defined based on your project requirements.\n",
-    "* [Consulting a full list of the tool parameters is advised](https://pro.arcgis.com/en/pro-app/latest/tool-reference/data-management/share-package.htm)"
+    "* It is recommended that you define the Tags and Summary sections based on your project requirements.\n",
+    "* [Consult a full list of the tool parameters.](https://pro.arcgis.com/en/pro-app/latest/tool-reference/data-management/share-package.htm)"
    ]
   },
   {
@@ -320,7 +320,7 @@
    },
    "source": [
     "<br>**NOTE :** <br>\n",
-    "If proceeding to Part 2, make note of the Item ID returned by this step during your **original** publication. It will be the portal item targeted for updates as the project goes through the construction phases. "
+    "If proceeding to Stage 2, make note of the Item ID returned by this step during your **original** publication. It will be the portal item targeted for updates as the project goes through the construction phases. "
    ]
   },
   {
