Copy Editing ACC

--- a/Samples/Download Updated Content from Autodesk Construction Cloud/DownloadUpdatedContentFromAutodeskConstructionCloud.ipynb
+++ b/Samples/Download Updated Content from Autodesk Construction Cloud/DownloadUpdatedContentFromAutodeskConstructionCloud.ipynb
@@ -37,7 +37,7 @@
    "id": "535bc490-db29-4e53-a1a8-9625508a6234",
    "metadata": {},
    "source": [
-    "## How to use the sample \n",
+    "## Use the sample \n",
     "\n",
     "### Step 1: Register an Application with Autodesk Platform Service\n",
     "\n",
